# inspect_evals_dashboard

./: .gitignore  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  Makefile  README.md  TODO.md  app.py  config.yml  pyproject.toml  requirements.txt
.github/workflows/: streamlit-app-testing.yml
.streamlit/: config.toml
scripts/: update_config.py
src/: config.py  dashboard_log_utils.py  load_eval_logs.py  test_config.py
src/log_utils/: aws_s3_utils.py  dashboard_log.py  dashboard_log_utils.py  load_eval_logs.py
src/pages/: changelog.py  docs.py  page_utils.py
src/pages/evaluations/: agents.py  assistants.py  coding.py  cybersecurity.py  knowledge.py  mathematics.py  multimodal.py  reasoning.py  safeguards.py  template.py
src/plots/: bar.py  cost_performance_scatter.py  cost_scatter.py  cutoff_scatter.py  pairwise.py  plot_utils.py  radar.py
tests/: __init__.py  conftest.py  test_config.py  test_dashboard_log_utils.py  test_inspect_evals_sanity.py  test_load_eval_logs.py  test_plot_utils.py  test_streamlit.py
tests/data/pubmedqa/: 1.json  2.json
tests/data/test_task/: 1.json  2.json
utils/: config.py
