[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "inspect_evals_dashboard"
version = "0.1.0"
description = "A Streamlit dashboard for visualizing AI evaluation results from inspect_evals"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ArcadiaImpact" }
]

[project.urls]
Homepage = "https://github.com/ArcadiaImpact/inspect_evals_dashboard"
Repository = "https://github.com/ArcadiaImpact/inspect_evals_dashboard.git"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
