[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "inspect_evals_dashboard"
version = "0.1.0"
description = "A Streamlit dashboard for visualizing AI evaluation results from inspect_evals"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dynamic = ["dependencies"]
license = { text = "MIT" }
authors = [
    { name = "ArcadiaImpact" }
]

[project.urls]
Homepage = "https://github.com/ArcadiaImpact/inspect_evals_dashboard"
Repository = "https://github.com/ArcadiaImpact/inspect_evals_dashboard.git"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rA --color=yes"
testpaths = ["tests"]
log_level = "WARNING"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "types-PyYAML",
    "pandas-stubs",
    "types-boto3",
]

[tool.mypy]
files = ["app.py", "src"]
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
src = ["app.py", "src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # flake8
    "D",      # pydocstyle
    "I",      # isort
    "SIM101", # duplicate isinstance
]
ignore = ["E203", "E501", "D10", "D415", "D203", "D213"]
